Fix: correction z-index du btn 'Passer au contenu'

--- a/source/sass/components/_buttons.scss
+++ b/source/sass/components/_buttons.scss
@@ -46,7 +46,7 @@
     margin: auto;
     top: 2rem;
     text-decoration: none;
-    z-index: 9;
+    z-index: 99;
     width: 12.5rem;
   }
 }
